--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+
+  width: 100vw;
+  height: 100vh;
 }
 
 .logo {
@@ -38,4 +41,20 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.add-student {
+  margin-bottom: 2rem;
+  display: flex;
+  width: 100%;
+}
+
+.add-student input {
+  width: 100%;
+}
+
+.students {
+ display: flex; 
+ flex-direction: column;
+ gap: 1rem;
 }
