Apply style and border in the app

--- a/src/components/Student/styles.css
+++ b/src/components/Student/styles.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: space-between;
   border-radius: 8px;
-  background-color: #b34141 ;
+  background-color: #6eb0ed ;
   padding: 1rem 2rem;
   margin-bottom: 1rem;
   flex-wrap: wrap;
