--- a/src/App.css
+++ b/src/App.css
@@ -8,39 +8,11 @@
   height: 100vh;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.App {
+  border: 0px solid;
+  border-radius: 25px;
+  padding: 2.35rem;
+  background-color: rgb(15 23 42 / 83%);
 }
 
 .add-student {
@@ -51,6 +23,30 @@
 
 .add-student input {
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 8px;
+  background-color: rgb(33 30 57 / 87%);
+  border-color: transparent;
+  color: #ffffff;
+  padding: 1rem 2rem;
+  margin-bottom: 1rem;
+  flex-wrap: wrap;
+  font-size: 1.3rem;
+}
+
+.add-button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 8px;
+  background-color: #646cff;
+  color: #ffffff;
+  font-size: 1.3rem;
+  padding: 1rem 2rem;
+  margin-bottom: 1rem;
+  flex-wrap: wrap;
 }
 
 .students {
