--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,11 @@
   font-size: 1.3rem;
 }
 
+.error{
+  border: 2px solid red;
+  transform: scale(.9);
+}
+
 .data-card-container {
   display: flex;
   gap: 20px;
@@ -65,6 +70,10 @@
 
 .data-card h5 {
   font-size: 18px;
+}
+
+.data-card p {
+  font-size: 18px;  
 }
 
 .data-card:last-child{
