--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+html, body{
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -45,11 +51,6 @@
   margin-bottom: 1rem;
   flex-wrap: wrap;
   font-size: 1.3rem;
-}
-
-.error{
-  border: 2px solid red;
-  transform: scale(.9);
 }
 
 .data-card-container {
